# rust-todolist

./: .gitignore  Cargo.toml  task.db  tasks.db
src/: app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
