[package]
name = "rust-todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.30.0"
chrono = "0.4.31"
crossterm = "0.27.0"
ratatui = {version = "0.25.0", features = ["widget-calendar"]}
time = "0.3.31"
